# solar-cloud-web

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  README.md  index.d.ts  next.config.js  package-lock.json  package.json  tsconfig.json  webpack-hmr.config.js
.gitlab/issue_templates/: new_task.md
server/: Cargo.toml  package-lock.json  package.json
server/src/: main.ts
server/test/: app.e2e-spec.ts
solar-s3/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
solar-s3/src/: file_service.rs  fs_check.rs  fs_metadata.rs  fs_size.rs  lib.rs
src/: lib.rs  main.ts
src/client/: index.d.ts  next.config.js
src/client/components/: AppLayout.tsx  Breadcrumbs.tsx  ContextMenu.tsx  Layout.tsx  Navbar.tsx  Notifications.tsx  PageHeading.tsx
src/client/hooks/: cloud.ts  files.ts  redux.ts
src/client/models/: IAuth.ts  IFile.ts  IUpload.ts  IUser.ts
src/client/router/: index.ts  private.ts
src/client/services/: AuthService.ts  FilesService.ts  UserService.ts  config.ts
src/client/store/: index.ts
src/client/styles/: globals.css  globals.less  globals_.css  theme.css  theme.ts  variables.less
src/client/utils/: index.js  index.ts  lessVarLoader.js
src/pages/: _app.tsx  index.tsx  marked.tsx  search.tsx  settings.tsx  sign-in.tsx  sign-up.tsx  trash.tsx
src/pages/app/: index.tsx  marked.tsx  trash.tsx
src/pages/cloud/: index.tsx  marked.tsx  search.tsx  settings.tsx  trash.tsx
src/pages/files/: [directory].tsx  index.tsx
src/server/: app.controller.ts  app.module.ts
test/: app.e2e-spec.ts
(+197 files in other folders)
