[package]
name = "solar-s3"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.10.0", features = ["full"] }
napi-derive = { version = "2.9.1", features = ["type-def"] }
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
async-recursion = { version = "1.0.0" }
sysinfo = "0.27.0"
xattr = "1.0.0"
mime_guess = "2.0.4"
byte-unit = "4.0.18"
chrono = "0.4.23"
regex = "*"

[build-dependencies]
napi-build = "2.0.1"
